--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,18 @@ canvas {
     display: block;
     margin: auto;
 }
+
+.tooltip {
+  position: absolute;
+  text-align: center;
+  padding: 6px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
+.chart {
+  margin-bottom: 50px;
+}
